# pyjena

./: .gitignore  .pre-commit-config.yaml  .releaserc.json  README.md
.github/: dependabot.yml
.github/workflows/: build.yml  commit-lint.yml  dependabot-auto-merge.yml  semantic-release.yml
kotlin/: build.gradle.kts  settings.gradle.kts
kotlin/src/main/kotlin/: Main.kt  SparqlJson.kt  TdbContainer.kt  main.kt
kotlin/src/test/kotlin/: TestTdbContainer.kt
kotlin/src/test/kotlin/tutils/: InitializedTdbContainerFactory.kt
kotlin/src/test/resources/: example1.rdf  example2.rdf
python/: .gitignore  pyproject.toml
python/src/pyjena/: gateway_client.py  sparql_result.py  tdb_container_wrapper.py
python/src/pyjena/backend/: README.md
python/test/: conftest.py  test_pyjena.py
