[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "pyjena"
dynamic =  ["version"]
dependencies = [
    "py4j",
    "py~=1.11.0",  # Not a depdency, but py4j depends on tox which installs a very old version
]
requires-python = ">=3.12"

[tool.pdm.dev-dependencies]
test = ["pytest"]

[tool.pdm.resolution.overrides]
py = ">=1.11.0"  # exact version
